[gd_scene load_steps=12 format=3 uid="uid://5mh1mrkqnuvq"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_jvq4q"]
[ext_resource type="Texture2D" uid="uid://dwid1y50bjgla" path="res://Art/Enemy Animation/Flop/blobWalk1.png" id="2_v00p0"]
[ext_resource type="Texture2D" uid="uid://dch56qbsat4vu" path="res://Art/Enemy Animation/Flop/blobWalk2.png" id="3_7fuud"]
[ext_resource type="Texture2D" uid="uid://yswlonn8xb4b" path="res://Art/Enemy Animation/Flop/blobWalk3.png" id="4_mmqps"]
[ext_resource type="Texture2D" uid="uid://behdmve175o14" path="res://Art/Enemy Animation/Flop/blobWalk4.png" id="5_e4mkb"]
[ext_resource type="Texture2D" uid="uid://xed3uq2bl1iu" path="res://Art/Enemy Animation/Flop/blobWalk5.png" id="6_e1d8r"]
[ext_resource type="Script" path="res://enemy/State Machine.gd" id="7_5jffq"]
[ext_resource type="Script" path="res://enemy/EnemyTargetLight.gd" id="8_cwp16"]
[ext_resource type="Script" path="res://enemy/EnemyIdle.gd" id="9_qabfy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cof0d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v00p0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v00p0")
}, {
"duration": 1.0,
"texture": ExtResource("3_7fuud")
}, {
"duration": 1.0,
"texture": ExtResource("4_mmqps")
}, {
"duration": 1.0,
"texture": ExtResource("5_e4mkb")
}, {
"duration": 1.0,
"texture": ExtResource("6_e1d8r")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_606lx"]
size = Vector2(12.6, 9.1)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(10, 10)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_jvq4q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -0.2)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_cof0d")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2(-2.2, 2.05)
shape = SubResource("RectangleShape2D_606lx")

[node name="State Machine" type="Node2D" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("7_5jffq")
initialState = NodePath("Target Light")

[node name="Target Light" type="Node2D" parent="State Machine" node_paths=PackedStringArray("enemy", "sprite")]
script = ExtResource("8_cwp16")
enemy = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")

[node name="Idle" type="Node2D" parent="State Machine" node_paths=PackedStringArray("enemy", "sprite")]
script = ExtResource("9_qabfy")
enemy = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.599999, 1.7)
scale = Vector2(0.99, 0.49)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.325

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered2"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout2"]
